--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.16.2",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
+    "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
     "react-redux": "^5.0.5",
     "react-redux-toastr": "^7.0.0",
-    "react-router": "^4.1.1",
+    "react-router": "^3.0.2",
     "react-scripts": "1.0.10",
     "redux": "^3.7.1",
     "redux-form": "^6.8.0",
