--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "admin-lte": "^2.3.11",
     "axios": "^0.16.2",
+    "bootstrap-datepicker": "^1.7.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
     "jquery": "^3.2.1",
