--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
     "lodash": "^4.17.4",
+    "react-dropzone": "^3.13.3",
     "react-redux": "^5.0.5",
     "react-redux-toastr": "^7.0.0",
     "react-router": "^3.0.2",
