--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "jquery.inputmask": "^3.3.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router": "^3.0.2"
   },
   "devDependencies": {
     "admin-lte": "^2.3.11",
