--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "jquery.inputmask": "^3.3.4",
     "react": "^15.6.1",
+    "react-avatar-cropper": "^0.1.3",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2"
   },
