--- a/package.json
+++ b/package.json
@@ -3,13 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "jquery.inputmask": "^3.3.4",
     "react": "^15.6.1",
-    "react-avatar-cropper": "^0.1.3",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2",
-    "react-router-dynamic-breadcrumbs": "^1.0.6",
-    "route-parser": "^0.0.5"
+    "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
     "admin-lte": "^2.3.11",
@@ -19,15 +15,20 @@
     "ionicons": "^3.0.0",
     "jquery": "^3.2.1",
     "jquery-ui": "^1.12.1",
+    "jquery.inputmask": "^3.3.4",
     "lodash": "^4.17.4",
+    "react-avatar-cropper": "^0.1.3",
+    "react-modal": "^2.2.4",
     "react-redux": "^5.0.5",
     "react-redux-toastr": "^7.0.0",
+    "react-router-dynamic-breadcrumbs": "^1.0.6",
     "react-scripts": "1.0.10",
     "redux": "^3.7.1",
     "redux-form": "^6.8.0",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "route-parser": "^0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
