--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
-    "admin-lte": "^2.3.11",
+    "admin-lte": "^2.4.0",
     "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.7.1",
     "font-awesome": "^4.7.0",
     "ionicons": "^3.0.0",
@@ -35,16 +36,12 @@
   "scripts": {
     "build-css": "node-less-chokidar src/styles/ -o src/styles/",
     "watch-css": "npm run build-css && node-less-chokidar src/ -o src/ --watch --recursive",
-   
     "start": "npm run build-css && run-p -ncr watch-css start-js",
     "start-js": "react-scripts start",
-    
     "build": "run-s -n build-css build-js",
     "build-js": "react-scripts build",
-
     "test": "run-s -n build-css test-js",
     "test-js": "react-scripts test --env=jsdom",
-    
     "eject": "react-scripts eject"
   },
   "authors": [
