--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
-    "admin-lte": "^2.4.0",
+    "admin-lte": "git+https://github.com/almasaeed2010/AdminLTE.git",
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
     "bootstrap-datepicker": "^1.7.1",
