--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jquery.inputmask": "^3.3.4",
     "lodash": "^4.17.4",
     "react-avatar-cropper": "^0.1.3",
+    "react-dropzone-component": "^2.0.0",
     "react-modal": "^2.2.4",
     "react-redux": "^5.0.5",
     "react-redux-toastr": "^7.0.0",
