--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "npm-run-all": "^4.0.2",
     "node-less-chokidar": "^0.1.2",
+    "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "react-stepzilla": "^4.6.3"
   },
   "devDependencies": {
     "admin-lte": "git+https://github.com/almasaeed2010/AdminLTE.git",
