--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.18.1",
     "node-less-chokidar": "^0.1.2",
     "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
+    "react-datepicker": "^0.55.0",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.1.2",
-    "react-stepzilla": "^4.6.3"
+    "react-stepzilla": "^4.6.3",
+    "react-widgets": "^4.0.2"
   },
   "devDependencies": {
     "admin-lte": "git+https://github.com/almasaeed2010/AdminLTE.git",
