--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     "react-avatar-cropper": "^0.1.3",
     "react-dropzone-component": "^2.0.0",
     "react-modal": "^2.2.4",
-    "react-redux": "^5.0.5",
+    "react-redux": "5.0.5",
     "react-redux-toastr": "^7.0.0",
     "react-router-dynamic-breadcrumbs": "^1.0.6",
     "react-scripts": "1.0.10",
-    "redux": "^3.7.1",
-    "redux-form": "^6.8.0",
+    "redux": "3.7.1",
+    "redux-form": "6.8.0",
     "redux-multi": "^0.1.12",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
